--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Chatbot | My Flask Web App</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style_chatbot.css') }}">
 </head>
 <body>
     <nav>
